--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "ethers": "^5.7.0",
     "next": "^12.3.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.4.0",
+    "react-toastify": "^9.0.8"
   },
   "devDependencies": {
     "@types/node": "^18.7.16",
