added the unaudited contracts message

--- a/.env.dist
+++ b/.env.dist
@@ -3,3 +3,4 @@ NEXT_PUBLIC_POS_HTTP_PROVIDER=
 NEXT_PUBLIC_DEPOSIT_POW_ADDRESS=
 NEXT_PUBLIC_WPOWETH_POS_ADDRESS=
 NEXT_PUBLIC_DEPOSIT_BLOCKS_CONFIRMATIONS=10
+NEXT_PUBLIC_ORACLE_API_URL=
