add export script, lockfile for npm users

--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "dev": "next ",
     "start": "next start",
     "build": "next build",
-    "lint": "next lint"
+    "lint": "next lint",
+    "export": "next export"
   },
   "dependencies": {
     "@emotion/react": "^11.10.4",
