--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "start": "next start",
     "build": "next build",
     "lint": "next lint",
-    "export": "next export"
+    "export": "NEXT_EXPORT=1 next export"
   },
   "dependencies": {
     "@emotion/react": "^11.10.4",
